<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/prviFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.welcomeFragments.PrviFragment">

    <Button
        android:id="@+id/prijava2"
        android:layout_width="256dp"
        android:layout_height="66dp"
        android:background="@drawable/spinner_bg"
        android:fontFamily="@font/alfa_slab_one"
        android:onClick="prijaviSe"
        android:text="@string/sign_in_for_vaccination"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629" />

    <Button
        android:id="@+id/prijava"
        android:layout_width="256dp"
        android:layout_height="66dp"
        android:background="@drawable/spinner_bg"
        android:fontFamily="@font/alfa_slab_one"
        android:onClick="showChangeLang"
        android:text="@string/change_language"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />

    <TextView
        android:id="@+id/naslov1"
        android:layout_width="277dp"
        android:layout_height="51dp"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center"
        android:shadowColor="#FFFFFF"
        android:text="@string/immunization"
        android:textColor="@color/blue"
        android:textSize="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="261dp"
        android:layout_height="122dp"
        android:src="@drawable/a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="253dp"
        android:layout_height="175dp"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="left"
        android:text="@string/the_vaccine_is_a_safe_and_effective_way_to_protect_individuals_from_serious_preventable_diseases_as_it_stimulates_the_body_to_build_resistance_to_a_particular_infection_and_strengthens_the_immune_system_by_training_it_to_form_antibodies"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504" />

</androidx.constraintlayout.widget.ConstraintLayout>