<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    tools:context=".fragments.welcomeFragments.DrugiFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/alfa_slab_one"
            android:gravity="center"
            android:text="Information about vaccines"
            android:textColor="@color/blue"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/informacije1"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_vakcina_foreground" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/informacije2"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="272dp"
            android:layout_height="153dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_vakcina1_foreground" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/informacije3"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:src="@mipmap/ic_vakcina2_foreground" />
    </LinearLayout>
</ScrollView>